tests/bad/validation_missing_field.mon
{
    Config: #struct {
        host(String),
        port(Number),
    },

    my_config :: Config = {
        port: 8080, // Invalid: missing required 'host' field
    },
}
